New files added - [] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,cx2-queries.hbm.xml,FormTypesServiceImpl.java,QueryExecutionController.java,VendorApplication.js,Vendor.java,VendorService.java,DataEntry.html,VendorAdminsController.java,Cx2QueryExecutorServiceImpl.java,UsersController.java,VendorController.java,StatesServiceImpl.java,ManageMunicipalities.html,servicedef.xml,VendorApplication.variables.json,topnav.html,cx2_query.json,Cx2QueryExecutorService.java,DataEntry.variables.json,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,FormStatusesServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -863,6 +863,18 @@
                     </wm-livegrid>
                 </wm-tabpane>
             </wm-tabs>
+            <wm-layoutgrid name="layoutgrid15_1">
+                <wm-gridrow name="gridrow59_1">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn116_1">
+                        <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn117_1"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow60_1">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn118_1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn119_1"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
