--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -3,7 +3,7 @@
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_help">
-                <wm-anchor caption="My Cart" name="helpLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()"></wm-anchor>
+                <wm-anchor caption="My Cart" name="helpLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" badgevalue="0"></wm-anchor>
             </wm-nav-item>
             <wm-nav-item name="nav_item5">
                 <wm-anchor name="anchor5" iconclass="wi wi-person" caption="My Profile" on-click="Variables.goToPage_MyProfile.invoke()"></wm-anchor>
