New files added - [CX-Logo.png] Files modified - [ManageMunicipalities.html,ManageMunicipalities.js,ResetPassword.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -5,7 +5,7 @@
                 <wm-gridrow name="gridrow3" padding="2em unset">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn7"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn8" horizontalalign="center">
-                        <wm-picture name="picture1" width="150pt" height="150pt" picturesource="resources/images/imagelists/CX-Logo.png"></wm-picture>
+                        <wm-picture name="picture1" width="250px" height="170px" picturesource="resources/images/logos/CX-Logo.png"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn9"></wm-gridcolumn>
                 </wm-gridrow>
