--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -15,7 +15,7 @@
                         <wm-livegrid formlayout="dialog" name="livegrid1">
                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="Manage Municipalities" dataset="bind:Variables.Cx2MunicipalitiesData.dataSet" navigation="Basic" name="grid1" confirmdelete="Are you sure you want to delete this Municipality?"
                             deletemessage="Municipality deleted successfully" nodatamessage="No Municipalities found." loadingdatamsg="Please Wait While Loading Municipalities..." exportformat="EXCEL">
-                                <wm-grid-column binding="municipalityGuid" caption="Municipality Guid" type="string" defaultvalue="bind:GUID" generator="assigned" show="true" readonly="true"></wm-grid-column>
+                                <wm-grid-column binding="municipalityGuid" caption="Municipality Guid" type="string" generator="assigned" readonly="true" edit-widget-type="text" defaultvalue="bind:GUID" show="true"></wm-grid-column>
                                 <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" edit-widget-type="number" show="true"></wm-grid-column>
                                 <wm-grid-column binding="logo" caption="Logo" type="blob" widget-type="image" generator="assigned" edit-widget-type="upload" searchable="false" show="true" readonly="false"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}">
                                 </wm-grid-column>
@@ -28,7 +28,7 @@
                                 <wm-grid-column binding="phone" caption="Phone" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="email" caption="Email" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow();addNewRowAction($event)" shortcutkey="" disabled="false"></wm-grid-action>
                                 <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                             </wm-grid>
@@ -52,8 +52,8 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow3">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn5">
-                                            <wm-form-field name="states" displayname="States" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" displayexpression="stateName" placeholder="Search"
-                                            orderby="stateName:asc"></wm-form-field>
+                                            <wm-form-field name="states" displayname="States" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="autocomplete" displayexpression="stateName" searchkey="stateName"
+                                            displaylabel="stateName" placeholder="Search"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn6">
                                             <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -86,7 +86,7 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn13">
-                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined" href="services/cx2/Municipalities/1/content/logo?0.5148097657754644"></wm-form-field>
+                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn14">
                                             <wm-form-field name="mondayYn" displayname="Monday Yn" show="true" primary-key="false" generator="assigned" key="mondayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
@@ -129,8 +129,8 @@
                                             <wm-form-field name="closeTime" displayname="Close Time" show="true" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn1" columnwidth="6">
-                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="true" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID()"
-                                            disabled="true" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="true" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID"
+                                            disabled="true"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
