New files added - [] Files modified - [Login.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -24,7 +24,7 @@
                                                     <wm-container class="input-group-addon" name="container4">
                                                         <wm-icon name="icon1" iconclass="wi wi-user"></wm-icon>
                                                     </wm-container>
-                                                    <wm-text placeholder="Username" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true" datavalue="sagar.vemala@wavemaker.com"></wm-text>
+                                                    <wm-text placeholder="Username" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
                                                 </wm-container>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -34,8 +34,7 @@
                                                     <wm-container class="input-group-addon" name="container6">
                                                         <wm-icon name="icon1" iconclass="wi wi-key"></wm-icon>
                                                     </wm-container>
-                                                    <wm-text type="password" name="passwordtext" placeholder="Password" class="app-login-password" width="100%" autocomplete="true" autocorrect="off" autocapitalize="off" updateon="default" required="true"
-                                                    datavalue="civicxpress"></wm-text>
+                                                    <wm-text type="password" name="passwordtext" placeholder="Password" class="app-login-password" width="100%" autocomplete="true" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
                                                 </wm-container>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
