--- a/src/main/webapp/pages/MyCompany/MyCompany.html
+++ b/src/main/webapp/pages/MyCompany/MyCompany.html
@@ -5,9 +5,17 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
-                <wm-gridrow name="gridrow1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn1" padding="2em unset">
+                <wm-gridrow name="gridrow1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn1">
                         <wm-label padding="unset 0.5em" name="label1" caption="My Company Dashboard" fontsize="15" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn16_1">
+                        <wm-composite name="composite1">
+                            <wm-label class="col-md-3 control-label" name="label9" caption="Select Company"></wm-label>
+                            <wm-container class="col-md-9" name="container1">
+                                <wm-select name="selectSelectCompany" dataset="bind:Variables.AdminVendorsList.dataSet" datafield="All Fields" displayfield="CompanyName" datavalue="bind:Variables.AdminVendorsList.firstRecord"></wm-select>
+                            </wm-container>
+                        </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
