New files added - [] Files modified - [leftnav.html,roles.json,Cx2QueryExecutorServiceImpl.java,cx2-queries.hbm.xml,QueryExecutionController.java,MyCompany.js,servicedef.xml,MyCompany.variables.json,project-security-provider.xml,cx2_query.json,Cx2QueryExecutorService.java,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -13,7 +13,7 @@
             <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" accessroles="User,MunicipalityAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
-            <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="CXVendorAdmin,CXAdmin"></wm-anchor>
+            <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="CXVendorAdmin,CXAdmin" badgevalue="bind:Variables.MyCompaniesCount.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
             <wm-anchor name="anchor5" iconclass="wi wi-person" caption="CX Admin" on-click="Variables.goToPage_CXAdmin.invoke()" accessroles="CXAdmin"></wm-anchor>
